--- a/src/App.css
+++ b/src/App.css
@@ -87,6 +87,10 @@ button:hover {
 @media (max-width: 480px) {
   .counter {
     width: 80%;
-    gap: 20px;
+    /* gap: 20px; */
+  }
+
+  .count-card {
+    margin: 0 20px;
   }
 }
